Fix alignwide on <700px width

--- a/wp-content/themes/ipbs-largo/less/single.less
+++ b/wp-content/themes/ipbs-largo/less/single.less
@@ -45,6 +45,12 @@
 			margin-right: -2.5vw;
 		}
 
+		@media ( max-width: 699px ) {
+			.alignwide {
+				margin-left: -2.5vw;
+				margin-right: -2.5vw;
+			}
+		}
 		@media ( min-width: 700px ) {
 			@width: ( 95vw );
 			@left: calc( ( @width - @measure ) * 5/12);
